--- a/minirover/param/global_costmap_params.yaml
+++ b/minirover/param/global_costmap_params.yaml
@@ -1,10 +1,9 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-
-  update_frequency: 10.0
-  publish_frequency: 10.0
-  transform_tolerance: 2.0
-
+  update_frequency: 1.0 #before: 5.0
+  publish_frequency: 0.5 #before 0.5
   static_map: true
- 
+  transform_tolerance: 10.0
+  cost_scaling_factor: 10.0
+  inflation_radius: 0.55
