--- a/minirover/param/local_costmap_params.yaml
+++ b/minirover/param/local_costmap_params.yaml
@@ -1,12 +1,9 @@
 local_costmap:
-  global_frame: odom
+  global_frame: map
   robot_base_frame: base_link
-
   update_frequency: 10.0
   publish_frequency: 10.0
   transform_tolerance: 5.0  
-
-  static_map: false  
   rolling_window: true
   width: 3
   height: 3
