--- a/teleop_twist_joy/config/minirover.config.yaml
+++ b/teleop_twist_joy/config/minirover.config.yaml
@@ -1,10 +1,12 @@
-# Logitech Attack3
+# Logitech - MiniRover
+
 axis_linear: 1  # Forward/Back
 scale_linear: 0.2
-scale_linear_turbo: 1.5
+scale_linear_turbo: 0.3
 
 axis_angular: 0  # Left/Right
 scale_angular: 1.0
+scale_angular_turbo: 2.0
 
 enable_button: 0  # Trigger
 enable_turbo_button: 1  # Button 2 aka thumb button
