--- a/bullet/param/logi_joy.yaml
+++ b/bullet/param/logi_joy.yaml
@@ -1,12 +1,14 @@
 # Logitech - Bullet
 
 axis_linear: 3  # Right Joystick
-scale_linear: 3.0
-scale_linear_turbo: 0.3
+scale_linear: 0.5
+scale_linear_turbo: 0.7
 
 axis_angular: 2  # Right Joystick
 scale_angular: 2.0
 scale_angular_turbo: 3.0
 
-enable_button: 4  # LB
-enable_turbo_button: 6  # BACK
+enable_button: 6  # LT
+enable_turbo_button: 4  # LB
+
+# https://wiki.ros.org/joy
