--- a/platform/package.xml
+++ b/platform/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>bullet</name>
+  <name>platform</name>
   <version>0.0.0</version>
   <description>The bullet package</description>
 
