continuing on major refactor

--- a/linorobot/teensy/firmware/.vscode/settings.json
+++ b/linorobot/teensy/firmware/.vscode/settings.json
@@ -9,5 +9,5 @@
         "string_view": "cpp",
         "initializer_list": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
