work in progress

--- a/linorobot/teensy/firmware/.vscode/settings.json
+++ b/linorobot/teensy/firmware/.vscode/settings.json
@@ -10,5 +10,13 @@
         "initializer_list": "cpp",
         "ostream": "cpp"
     },
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "python.autoComplete.extraPaths": [
+        "/home/ubuntu/catkin_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/ubuntu/catkin_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ]
 }
