--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -22,6 +22,14 @@ build_src_filter =
     -<*>
     +<i2c_scanner.cpp>
 
+[env:teensy41led]
+board = teensy41
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<led_test.cpp>
+
 [env:teensy40] 
 board = teensy40
 
