--- a/lino_msgs/package.xml
+++ b/lino_msgs/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>lino_msgs</name>
   <version>0.0.1</version>
   <description>The lino_msgs package</description>
@@ -11,9 +11,9 @@
   <build_depend>geometry_msgs</build_depend>
 
 
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
   <export>
 
