--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -14,7 +14,7 @@ build_src_filter =
     -<*>
     +<firmware.cpp>
 
-[env:teensy41imu]
+[env:teensy41i2cscanner]
 board = teensy41
 monitor_speed = 9600
 monitor_port = /dev/linobase
@@ -29,6 +29,24 @@ monitor_port = /dev/linobase
 build_src_filter = 
     -<*>
     +<led_test.cpp>
+
+[env:teensy41buzzer]
+board = teensy41
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<buzzertest.cpp>
+lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
+
+[env:teensy41buzzersoundeffects]
+board = teensy41
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<buzzersouneffects.cpp>
+lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
 
 [env:teensy40] 
 board = teensy40
