work in progress

--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -13,6 +13,8 @@ board = teensy41
 build_src_filter = 
     -<*>
     +<firmware.cpp>
+lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
+build_flags = -I/lib
 
 [env:teensy41i2cscanner]
 board = teensy41
