work in progress

--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -60,6 +60,11 @@ board = teensy35
 
 [env:teensy32] 
 board = teensy31
+build_src_filter = 
+    -<*>
+    +<firmware.cpp>
+lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
+
 
 [env:teensy31] 
 board = teensy31
