work in progress

--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -49,15 +49,6 @@ build_src_filter =
     +<buzzersouneffects.cpp>
 lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
 
-[env:teensy40] 
-board = teensy40
-
-[env:teensy36]
-board = teensy36
-
-[env:teensy35]
-board = teensy35
-
 [env:teensy32] 
 board = teensy31
 build_src_filter = 
@@ -65,6 +56,11 @@ build_src_filter =
     +<firmware.cpp>
 lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
 
-
-[env:teensy31] 
+[env:teensy322cscanner]
 board = teensy31
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<i2c_scanner.cpp>
+    
