work in progress

--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -31,6 +31,15 @@ build_src_filter =
     -<*>
     +<led_test.cpp>
 
+[env:branbottest]
+board = teensy41
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<branbottest.cpp>
+
+
 [env:teensy41buzzer]
 board = teensy41
 monitor_speed = 9600
