--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -15,6 +15,9 @@ build_src_filter =
     +<firmware.cpp>
 lib_deps = 
     sparkfun/SparkFun Toolkit@^0.9.0
+    SPI
+    adafruit/Adafruit ICM20X
+
 
 [env:teensy40i2cscanner]
 board = teensy40
@@ -83,6 +86,5 @@ build_src_filter =
     +<imu20948test.cpp>
 lib_deps = 
     SPI
-    Adafruit_ICM20948
     adafruit/Adafruit ICM20X
     Adafruit_Sensor
