--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -18,6 +18,16 @@ lib_deps =
     SPI
     adafruit/Adafruit ICM20X
 
+[env:teensy32] 
+board = teensy31
+build_src_filter = 
+    -<*>
+    +<firmware.cpp>
+lib_deps = 
+    sparkfun/SparkFun Toolkit@^0.9.0
+    SPI
+    adafruit/Adafruit ICM20X
+
 
 [env:teensy40i2cscanner]
 board = teensy40
@@ -60,13 +70,6 @@ monitor_port = /dev/linobase
 build_src_filter = 
     -<*>
     +<buzzersouneffects.cpp>
-lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
-
-[env:teensy32] 
-board = teensy31
-build_src_filter = 
-    -<*>
-    +<firmware.cpp>
 lib_deps = sparkfun/SparkFun Toolkit@^0.9.0
 
 [env:teensy322cscanner]
