--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -80,7 +80,7 @@ build_src_filter =
     -<*>
     +<i2c_scanner.cpp>
 
-[env:imu20948testteemsy40]
+[env:imu20948testteensy40]
 board = teensy40
 monitor_speed = 9600
 monitor_port = /dev/linobase
@@ -91,3 +91,19 @@ lib_deps =
     SPI
     adafruit/Adafruit ICM20X
     Adafruit_Sensor
+
+[env:armtest1teensy40]
+board = teensy40
+monitor_speed = 9600
+monitor_port = /dev/linobase
+build_src_filter = 
+    -<*>
+    +<arm_test_1.cpp>
+lib_deps = 
+    sparkfun/SparkFun Toolkit@^0.9.0
+    SPI
+    adafruit/Adafruit ICM20X
+    adafruit/Adafruit BusIO @ ^1.14.1
+    adafruit/Adafruit Unified Sensor @ ^1.1.9
+
+ 
