work in progress

--- a/linorobot/teensy/firmware/platformio.ini
+++ b/linorobot/teensy/firmware/platformio.ini
@@ -92,13 +92,13 @@ lib_deps =
     adafruit/Adafruit ICM20X
     Adafruit_Sensor
 
-[env:armtest1teensy40]
+[env:armtestteensy40]
 board = teensy40
 monitor_speed = 9600
 monitor_port = /dev/linobase
 build_src_filter = 
     -<*>
-    +<arm_test_1.cpp>
+    +<arm_test_3.cpp>
 lib_deps = 
     sparkfun/SparkFun Toolkit@^0.9.0
     SPI
